kubernetes/apps/ai/speaches/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speaches
spec:
  selector:
    app: speaches
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
